ITHelp_30Days/example/dc.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: nginx-dc
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: quay.io/brandon_tsai/testlab:1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
