ITHelp_30Days/example/ocppod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: quay.io/brandon_tsai/testlab:3
    imagePullPolicy: Always
    ports:
    - containerPort: 8080
